# marqflow

./: .gitignore  CODEBASE_REVIEW.md  MARQUETRY_PRODUCT_PLAN.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
docs/: PACKING_AND_EXPORTS.md  RELEASE.md  USER_GUIDE.md
exported/: pack.json  pieces.csv  pieces.json
src/marqflow/: __init__.py  cli.py  config.py  gallery_web.py  geometry.py  image.py  jobs.py  marquetry.py  models.py  packing.py  pipeline.py  project.py  regions.py  svg.py  web.py  workspace.py
src/marqflow/static/: dom.js  dom.ts  gallery-types.d.ts  gallery.css  gallery.html  gallery.js  gallery.ts  ui-types.ts
tests/: test_browser_smoke.py  test_browser_workflow.py  test_gallery_assets.py  test_regions.py  test_rewrite_core.py  test_workspace_gallery.py
