[project]
name = "marqflow"
version = "0.1.0"
description = "Interactive region-based marquetry planning pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pillow>=12.2.0",
    "scikit-image>=0.25.2",
    "typer>=0.26.7",
]

[project.scripts]
marqflow = "marqflow.cli:app"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "single"
