[project]
name = "marqflow"
version = "0.1.0"
description = "Interactive region-based marquetry planning pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.137.1",
    "numpy>=2.2.6",
    "pillow>=12.2.0",
    "scikit-image>=0.25.2",
    "python-multipart>=0.0.20",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
    "rectpack>=0.2.2",
    "shapely>=2.1.2",
]

[project.optional-dependencies]
nesting = [
    "python-libnest2d>=0.1.3; platform_system == 'Linux' or platform_system == 'Windows'",
]

[project.scripts]
marqflow = "marqflow.cli:app"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "playwright>=1.60.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "single"
